# ARC-Fusion

./: CHANGELOG.md  CONTRIBUTING.md  LAUNCH_POST.md  LICENSE  README.md  SECURITY.md  SEO_TOPICS.txt  VALIDATION_REPORT.md  pyproject.toml
docs/: ARCHITECTURE.md  ARC_APACHE_INTEGRATION.md  ARC_CORE_INTEGRATION.md  CODEC_REPLACEMENT_BOUNDARIES.md  LANGUAGE_AND_LLMBUILDER.md  PUBLIC_LAUNCH_POST.md  PUBLIC_POSITIONING.md  ROADMAP.md  SEO_TOPICS.txt  STREAM_MEMORY.md  SURE_MEDIA_RECIPES.md  VALIDATION_COMMANDS.md  VALIDATION_REPORT.md
examples/: sure_params.json
integrations/arc_core/: routes_arc_fusion.py
integrations/arc_core/migrations/: 003_arc_fusion_payloads.sql
schemas/: binary_manifest.schema.json  command_plan.schema.json  media_execution.schema.json  media_receipt.schema.json  receipt.schema.json  scene_index.schema.json  stream_timeline.schema.json  sure_media_recipe.schema.json
src/arc_fusion/: arc_apache_client.py  binary_store.py  cli.py  crypto.py  crypto_utils.py  ffmpeg_backend.py  ffmpeg_tools.py  hash_utils.py  index.py  language_bindings.py  llmbuilder.py  pipeline.py  planner.py  receipts.py  store.py  stream_memory.py  sure.py
tests/: test_pipeline.py  test_planner_index_cli.py  test_smoke.py  test_store.py
