[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-fusion"
version = "0.1.0"
description = "Binary-first cryptographic media runtime for ARC memory, replay, and AI-readable stream cognition."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Gary Doman / GareBear99"}]
keywords = ["ffmpeg", "media", "cryptographic", "binary-memory", "arc", "streammemory", "ai-lineage"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
arc-fusion = "arc_fusion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
