[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-fusion"
version = "0.2.0"
description = "ARC-native binary-first cryptographic media runtime backed by FFmpeg."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Gary Doman / TizWildinEntertainment"}]
license = {text = "MIT"}
dependencies = ["cryptography>=41"]

[project.scripts]
arc-fusion = "arc_fusion.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
