[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-fusion"
version = "0.3.0"
description = "ARC-native FFmpeg-backed binary-first cryptographic media runtime."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Gary Doman / TizWildinEntertainment"}]
keywords = ["ffmpeg", "media", "cryptographic-receipts", "binary-storage", "stream-memory", "ai-lineage", "arc"]
dependencies = ["cryptography>=41.0.0"]

[project.scripts]
arc-fusion = "arc_fusion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
